--- a/src/views/editCollectiveHealth.ejs
+++ b/src/views/editCollectiveHealth.ejs
@@ -33,7 +33,7 @@
                                                 type="text"
                                                 name="numero_colectivo"
                                                 id="numero_colectivo"
-                                                value="<%= collective.numero_colectivo %>"
+                                                value="<%= collective[0].numero_colectivo %>"
                                                 class="form-control"
                                                 oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                 required
@@ -46,7 +46,7 @@
                                             <div class="numeral-selector selector">
                                                 <div class="select-box-wrapper">
                                                     <select name="tipo_id_rif_tomador" id="select_box">
-                                                        <option value="<%= collective.tipo_id_rif_tomador %>"><%= collective.tipo_id_rif_tomador %></option>
+                                                        <option value="<%= collective[0].tipo_id_rif_tomador %>"><%= collective[0].tipo_id_rif_tomador %></option>
                                                         <option value="V">V</option>
                                                         <option value="E">E</option>
                                                         <option value="J">J</option>
@@ -61,7 +61,7 @@
                                                 name="id_rif_tomador"
                                                 id="id_rif_tomador"
                                                 onkeyup="pasarNombreTomador2();"
-                                                value="<%= collective.id_rif_tomador %>" 
+                                                value="<%= collective[0].id_rif_tomador %>" 
                                                 class="form-control input-numeral"
                                                 required
                                             >
@@ -74,7 +74,7 @@
                                                 type="text"
                                                 name="nombre_tomador_colectivo"
                                                 id="nombre_tomador_colectivo"
-                                                value="<%= collective.nombre_tomador_colectivo %>"
+                                                value="<%= collective[0].nombre_tomador_colectivo %>"
                                                 class="form-control"
                                                 oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                 required
@@ -88,7 +88,7 @@
                                                 type="email"
                                                 name="correo_tomador"
                                                 id="correo_tomador"
-                                                value="<%= collective.correo_tomador %>"
+                                                value="<%= collective[0].correo_tomador %>"
                                                 class="form-control"
                                                 required
                                             >
@@ -148,7 +148,7 @@
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">¿Maternidad?</label>
                                         <div class="col-sm-9">
                                             <select class="form-control" name="maternidad_colectivo" id="maternidad_colectivo" onchange="showInput()" required>
-                                                <option value="<%= collective.maternidad_colectivo %>"><%= collective.maternidad_colectivo %></option>
+                                                <option value="<%= collective[0].maternidad_colectivo %>"><%= collective[0].maternidad_colectivo %></option>
                                                 <option value="SÍ">SÍ</option>
                                                 <option value="NO">NO</option>
                                             </select>
@@ -177,7 +177,7 @@
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Plazos de Espera</label>
                                         <div class="col-sm-9">
                                             <select class="form-control" name="plazo_espera_colectivo" id="plazo_espera_colectivo" onchange="showInput2()" required>
-                                                <option value="<%= collective.plazo_espera_colectivo %>"><%= collective.plazo_espera_colectivo %></option>
+                                                <option value="<%= collective[0].plazo_espera_colectivo %>"><%= collective[0].plazo_espera_colectivo %></option>
                                                 <option value="SÍ">SÍ</option>
                                                 <option value="NO">NO</option>
                                             </select>
@@ -204,7 +204,7 @@
                                                 type="text"
                                                 name="grupo_colectivo"
                                                 id="grupo_colectivo"
-                                                value="<%= collective.grupo_colectivo %>"
+                                                value="<%= collective[0].grupo_colectivo %>"
                                                 class="form-control"
                                                 oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                             >
@@ -214,7 +214,7 @@
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Moneda</label>
                                         <div class="col-sm-9">
                                             <select class="form-control" name="tipo_moneda_colectivo" id="tipo_moneda_colectivo" onchange="currencySignChange()" required>
-                                                <option value="<%= collective.tipo_moneda_colectivo %>"><%= collective.tipo_moneda_colectivo %></option>
+                                                <option value="<%= collective[0].tipo_moneda_colectivo %>"><%= collective[0].tipo_moneda_colectivo %></option>
                                                 <option value="BOLÍVAR">BOLÍVAR</option>
                                                 <option value="DÓLAR">DÓLAR</option>
                                                 <option value="EUROS">EUROS</option>
@@ -238,7 +238,7 @@
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Canal</label>
                                         <div class="col-sm-9">
                                             <select class="form-control" name="tipo_canal_colectivo" id="tipo_canal_colectivo" onchange="showList()" required>
-                                                <option value="<%= collective.tipo_canal_colectivo %>"><%= collective.tipo_canal_colectivo %></option>
+                                                <option value="<%= collective[0].tipo_canal_colectivo %>"><%= collective[0].tipo_canal_colectivo %></option>
                                                 <option value="REDES SOCIALES">REDES SOCIALES</option>
                                                 <option value="PÁGINA WEB">PÁGINA WEB</option>
                                                 <option value="ÁREA BY ATINA">ÁREA BY ATINA</option>
@@ -334,7 +334,7 @@
                                 type="hidden" 
                                 name="id_colectivo"
                                 id="id_colectivo"
-                                value="<%= collective.id_colectivo %>"
+                                value="<%= collective[0].id_colectivo %>"
                                 class="form-control"
                             >
                         </div>
