--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -144,6 +144,12 @@
                         </ul>
                     </li>
                     <li>
+                        <a href="#"><i class="fa fa-refresh"></i> <span class="nav-label">Renovaciones</span><span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level collapse">
+                            <li><a href="/sistema/consult-renewal">Consultar Renovaciones</a></li>
+                        </ul>
+                    </li>
+                    <li>
                         <a href="#"><i class="fa fa-file-text"></i> <span class="nav-label">Reclamos</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
                             <li><a href="/sistema/add-refund">Agregar Reembolso</a></li>
@@ -164,6 +170,10 @@
                             <li><a href="/sistema/policy-claims">Siniestralidad Póliza</a></li>
                             <li><a href="/sistema/global-loss-ratio">Siniestralidad Global</a></li>
                             <li><a href="/sistema/pending-payments">Pagos Pendientes</a></li>
+                            <li><a href="/sistema/accident-rate">Siniestralidad</a></li>
+                            <li><a href="/sistema/premiums-collected-date">Primas Cobradas Fecha</a></li>
+                            <li><a href="/sistema/portfolio-composition">Composición de Cartera</a></li>
+                            <li><a href="/sistema/persistence">Persistencia</a></li>
                         </ul>
                     </li>
                     <li>
